--- a/css/style.css
+++ b/css/style.css
@@ -570,4 +570,26 @@
   .close-btn:hover {
     color: #ff0000;
   }
+#order-history .card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+#order-history img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+#order-history .card-title {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#order-history .col-md-3 {
+    margin-bottom: 10px;
+}
+
   
